--- a/src/Styles/project-card.css
+++ b/src/Styles/project-card.css
@@ -1,6 +1,6 @@
 .project-card {
 	margin: 1rem;
-	width: 21.89rem;
+	width: 18vw;
 	height: 15vw;
 	border-radius: 1rem;
 	overflow: hidden;
@@ -8,25 +8,21 @@
 	/* display: inline-block; */
 }
 
-.project-image {
-	height: fit-content;
-}
-
 .project-image > img {
 	max-width: 100%;
-	height: 100%;
+	/* height: 100%; */
 }
 
 .project-desc {
-	padding: 1rem;
+	padding: 1vw;
 	background: #fff;
 	color: #000;
-
 	border-radius: 0 0 1rem 1rem;
+	font-size: 1.4vmin;
 }
 
 .project-desc > p {
-	font-size: 0.8rem;
+	/* font-size: 0.8rem; */
 	color: #686868;
 	padding-top: 0.3rem;
 }
